@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-12T16:14:18Z",
-  "count_outdated" : 238,
-  "uniques_outdated" : 111,
+  "timestamp" : "2022-04-17T08:13:50Z",
+  "count_outdated" : 249,
+  "uniques_outdated" : 117,
   "count" : 252,
   "uniques" : 120,
   "clones" : [
-    {
-      "timestamp": "2022-04-03T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
-    },
     {
       "timestamp": "2022-04-05T00:00:00Z",
       "count": 1,
