@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 9,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-04-03T00:00:00Z",
-      "count": 11,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-04-05T00:00:00Z",
       "count": 1,
